<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/num_particles"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="6dp" />

            <com.nfaralli.particleflow.ValidatedEditText
                android:id="@+id/numParticles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:layout_marginRight="6dp"
                android:layout_marginLeft="6dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/particle_size"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="6dp" />

            <com.nfaralli.particleflow.ValidatedEditText
                android:id="@+id/particleSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:layout_marginRight="6dp"
                android:layout_marginLeft="6dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/num_att_points"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="6dp" />

            <com.nfaralli.particleflow.ValidatedEditText
                android:id="@+id/numAPoints"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp" />


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="6dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bg_color" />

                <com.nfaralli.particleflow.GradientView
                    android:id="@+id/bgGradientView"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="6dp" />

            </LinearLayout>

            <com.nfaralli.particleflow.ColorView
                android:id="@+id/bgColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="6dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/particles_colors" />

                <com.nfaralli.particleflow.GradientView
                    android:id="@+id/gradientView"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="6dp" />

            </LinearLayout>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/slow_particles_colors"
                android:layout_marginLeft="18dp"
                android:layout_marginTop="6dp"
                android:layout_marginRight="6dp" />

            <com.nfaralli.particleflow.ColorView
                android:id="@+id/slowColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="6dp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/fast_particles_colors"
                android:layout_marginLeft="18dp"
                android:layout_marginTop="6dp"
                android:layout_marginRight="6dp" />

            <com.nfaralli.particleflow.ColorView
                android:id="@+id/fastColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="6dp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/hue_direction"
                android:layout_marginLeft="18dp"
                android:layout_marginTop="6dp"
                android:layout_marginRight="6dp" />

            <Spinner
                android:id="@+id/hueDirection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/hue_directions"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="6dp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/force_coefficients"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="6dp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/force01_attraction"
                android:layout_marginLeft="18dp"
                android:layout_marginTop="6dp"
                android:layout_marginRight="6dp" />

            <com.nfaralli.particleflow.ValidatedEditText
                android:id="@+id/f01_attraction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:layout_marginRight="18dp"
                android:layout_marginLeft="6dp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/force01_drag"
                android:layout_marginLeft="18dp"
                android:layout_marginTop="6dp"
                android:layout_marginRight="6dp" />

            <com.nfaralli.particleflow.ValidatedEditText
                android:id="@+id/f01_drag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:layout_marginRight="18dp"
                android:layout_marginLeft="6dp" />

            <Button
                android:id="@+id/resetButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reset"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>